--- a/docker-compose_flaskapp.yml
+++ b/docker-compose_flaskapp.yml
@@ -2,7 +2,7 @@ version: '3.8'
 
 services:
   monitor-dht-sensor:
-    image: livedata-dht
+    image: flask-sensor-app
     ports:
       - "5000:5000"
     restart: unless-stopped
